@@ -1,6 +1,9 @@
 Changes from jTDS 1.1
 =======================
 
+07/04/2005 - Alin Sinpalean
+ o Corrected some compilation issues with Java 1.3.
+
 07/01/2005 - Alin Sinpalean
  o Applied yet another patch for bug [1229636] Memory Leak in Prepared
    Statements, with a minor change. This seems to finally fix the caching and
